Hero image Visibility on Github Fixed

--- a/css/app.css
+++ b/css/app.css
@@ -142,7 +142,7 @@ header {
     position: relative;
     width: 100%;
     height: 100vh;
-    background: url('/img/hero.png') center/cover no-repeat;
+    background: url('./img/hero.png') center/cover no-repeat;
 }
 
 /* Gradient Overlay */
